--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/ic_cheaf"
+        android:background="@color/white"
         android:contentDescription="@string/profile_avatar_description" />
 
     <TextView
