--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="dark_grey">#242424</color>
+    <color name="light_grey">#C9C9C9</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_red">#ff870000</color>
     <color name="white_alpha_80">#CCFFFFFF</color>
