--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
             android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:navGraph="@navigation/navigation" />
+            app:navGraph="@navigation/navigation"
+            tools:ignore="FragmentTagUsage" />
 
         <FrameLayout
             android:id="@+id/main_tint"
