--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,11 +6,11 @@
         <item name="colorPrimaryVariant">@color/app_color_2</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/app_color_1</item>
+        <item name="colorSecondary">@color/app_color_3</item>
         <item name="colorSecondaryVariant">@color/app_color_5</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorSecondaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/light_grey</item>
     </style>
