--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Spoonzilla" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/app_color_3</item>
         <item name="colorSecondaryVariant">@color/app_color_5</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/app_color_4</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorSecondaryVariant</item>
         <!-- Customize your theme here. -->
